--- a/package.json
+++ b/package.json
@@ -57,8 +57,12 @@
     "stylelint-webpack-plugin": "^0.10.5",
     "ts-loader": "^5.3.0",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
+    "tslint": "^5.11.0",
+    "tslint-loader": "^3.5.4",
+    "tslint-webpack-plugin": "^1.2.2",
     "typescript": "^3.1.6",
     "uglifyjs": "^2.4.11",
+    "url-loader": "^1.1.2",
     "webpack": "^4.23.1",
     "webpack-cli": "^3.1.2"
   },
