--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "npm-pug",
+  "name": "npm-ts-pug",
   "description": "",
   "version": "1.0.0",
   "main": "index",
@@ -20,25 +20,11 @@
   },
   "devDependencies": {
     "autoprefixer": "^7.2.6",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.1",
-    "babel-loader": "^7.1.2",
-    "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.18.13",
     "chokidar-cli": "^1.2.0",
     "concat": "^1.0.3",
     "css-loader": "^1.0.1",
     "cssnano": "^4.1.7",
-    "eslint": "^5.8.0",
-    "eslint-config-prettier": "^3.1.0",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-loader": "^2.1.1",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-node": "^8.0.0",
-    "eslint-plugin-prettier": "^3.0.0",
-    "eslint-plugin-promise": "^4.0.1",
-    "eslint-plugin-standard": "^4.0.0",
     "imagemin-cli": "^3.0.0",
     "jquery": "^3.3.1",
     "mini-css-extract-plugin": "^0.4.4",
@@ -47,8 +33,6 @@
     "npm-run-all": "^4.1.1",
     "postcss-loader": "^3.0.0",
     "precss": "^3.1.2",
-    "prettier": "^1.14.3",
-    "prettier-webpack-plugin": "^1.2.0",
     "pug-cli": "^1.0.0-alpha6",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
@@ -56,10 +40,6 @@
     "stylelint-config-standard": "^18.1.0",
     "stylelint-webpack-plugin": "^0.10.5",
     "ts-loader": "^5.3.0",
-    "tsconfig-paths-webpack-plugin": "^3.2.0",
-    "tslint": "^5.11.0",
-    "tslint-loader": "^3.5.4",
-    "tslint-webpack-plugin": "^1.2.2",
     "typescript": "^3.1.6",
     "uglifyjs": "^2.4.11",
     "url-loader": "^1.1.2",
