--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "author": "",
   "license": "ISC",
   "scripts": {
-    "build:html": "bin/build_html.sh",
+    "build:pug": "bin/build_pug.sh",
     "build:ts-css": "bin/build_ts-css.sh",
     "build:image": "bin/build_image.sh",
     "build": "bin/build.sh",
     "clean": "bin/clean.sh",
-    "watch:html": "chokidar src/html/* -c 'npm run build:html'",
+    "watch:pug": "chokidar src/pug/* -c 'npm run build:pug'",
     "watch:css": "chokidar src/scss/* -c 'npm run build:ts-css'",
     "watch:js": "chokidar src/ts/* -c 'npm run build:ts-css'",
     "watch:image": "chokidar src/img/* -c 'npm run build:image'",
