--- a/.editorconfig
+++ b/.editorconfig
@@ -8,7 +8,7 @@ indent_size = 2
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[*.{html}]
+[*.{html, pug}]
 indent_style = space
 indent_size = 2
 
