--- a/package.json
+++ b/package.json
@@ -6,15 +6,16 @@
   "author": "",
   "license": "ISC",
   "scripts": {
-    "build:pug": "bin/build_pug.sh",
-    "build:ts-css": "bin/build_ts-css.sh",
     "build:image": "bin/build_image.sh",
+    "build:pug": "bin/build_pug.sh",
+    "build:scss": "bin/build_scss.sh",
+    "build:ts": "bin/build_ts.sh",
     "build": "bin/build.sh",
     "clean": "bin/clean.sh",
-    "watch:pug": "chokidar src/pug/* -c 'npm run build:pug'",
-    "watch:css": "chokidar src/scss/* -c 'npm run build:ts-css'",
-    "watch:js": "chokidar src/ts/* -c 'npm run build:ts-css'",
     "watch:image": "chokidar src/img/* -c 'npm run build:image'",
+    "watch:pug": "chokidar src/pug/* -c 'npm run build:pug'",
+    "watch:scss": "chokidar src/scss/* -c 'npm run build:scss'",
+    "watch:ts": "chokidar src/ts/* -c 'npm run build:ts'",
     "watch:server": "browser-sync start -s 'dist/' -f dist/* --port 8080 ",
     "watch": "bin/build.sh && npm-run-all -p watch:*"
   },
@@ -23,26 +24,18 @@
     "browser-sync": "^2.18.13",
     "chokidar-cli": "^1.2.0",
     "concat": "^1.0.3",
-    "css-loader": "^1.0.1",
-    "cssnano": "^4.1.7",
+    "css-mqpacker": "^7.0.0",
     "imagemin-cli": "^3.0.0",
-    "jquery": "^3.3.1",
-    "mini-css-extract-plugin": "^0.4.4",
     "mkdirp": "^0.5.1",
-    "node-sass": "^4.9.4",
+    "node-sass": "^4.10.0",
     "npm-run-all": "^4.1.1",
-    "postcss-loader": "^3.0.0",
-    "precss": "^3.1.2",
+    "postcss-cli": "^6.0.1",
     "pug-cli": "^1.0.0-alpha6",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.1",
     "stylelint": "^9.0.0",
     "stylelint-config-standard": "^18.1.0",
-    "stylelint-webpack-plugin": "^0.10.5",
     "ts-loader": "^5.3.0",
     "typescript": "^3.1.6",
     "uglifyjs": "^2.4.11",
-    "url-loader": "^1.1.2",
     "webpack": "^4.23.1",
     "webpack-cli": "^3.1.2"
   },
