--- a/package.json
+++ b/package.json
@@ -35,6 +35,10 @@
     "stylelint": "^9.0.0",
     "stylelint-config-standard": "^18.1.0",
     "ts-loader": "^5.3.0",
+    "tslint": "^5.16.0",
+    "tslint-config-standard": "^8.0.1",
+    "tslint-loader": "^3.5.4",
+    "tslint-webpack-plugin": "^2.0.4",
     "typescript": "^3.1.6",
     "uglifyjs": "^2.4.11",
     "webpack": "^4.23.1",
