--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,5 @@
 {
-  "compilerOptions": {
-    "target": "es5",
-    "module": "commonjs",
-    "strict": true,
-    "esModuleInterop": true
-  }
+  "exclude": [
+    "node_modules"
+  ]
 }
