--- a/package.json
+++ b/package.json
@@ -5,20 +5,41 @@
   "main": "index",
   "license": "ISC",
   "scripts": {
+    "//--- clean タスク ": "------------//",
+    "clean": "bin/clean.sh",
+    "//--- dev build タスク ": "------------//",
     "build:image": "bin/build_image.sh",
-    "build:pug": "bin/build_pug.sh",
+    "build:html": "bin/build_html.sh",
     "build:scss": "bin/build_scss.sh",
     "build:ts": "bin/build_ts.sh",
     "build": "bin/build.sh",
-    "clean": "bin/clean.sh",
-    "watch:image": "chokidar src/img/* -c 'npm run build:image'",
-    "watch:pug": "chokidar src/pug/* -c 'npm run build:pug'",
-    "watch:scss": "chokidar src/scss/* -c 'npm run build:scss'",
-    "watch:ts": "chokidar src/ts/* -c 'npm run build:ts'",
+    "//--- watch タスク ": "------------//",
+    "watch:image": "chokidar src/img/* -c 'yarn build:image'",
+    "watch:html": "chokidar src/html/* -c 'yarn build:html'",
+    "watch:scss": "chokidar src/scss/* -c 'yarn build:scss'",
+    "watch:ts": "chokidar src/ts/* -c 'yarn build:ts'",
     "watch:server": "browser-sync start -s 'dist/' -f dist/* --port 8001",
-    "watch": "bin/build.sh && npm-run-all -p watch:*",
-    "dev": "yarn watch",
-    "start": "yarn watch"
+    "watch": "npm-run-all -p watch:*",
+    "//--- まとめコマンド ": "------------//",
+    "dev": "yarn build && yarn watch",
+    "start": "yarn build && yarn watch",
+    "prod": "yarn build"
+  },
+  "site_data": {
+    "page_data": [
+      {
+        "title": "title1",
+        "text": "text1"
+      },
+      {
+        "title": "title2",
+        "text": "text2"
+      },
+      {
+        "title": "title3",
+        "text": "text3"
+      }
+    ]
   },
   "devDependencies": {
     "autoprefixer": "^7.2.6",
@@ -27,7 +48,7 @@
     "concat": "^1.0.3",
     "css-mqpacker": "^7.0.0",
     "imagemin-cli": "^5.0.0",
-    "jq": "^1.7.2",
+    "imagemin-keep-folder": "^5.3.2",
     "mkdirp": "^0.5.1",
     "node-sass": "^4.10.0",
     "npm-run-all": "^4.1.5",
@@ -42,7 +63,6 @@
     "typescript": "^3.1.6",
     "uglifyjs": "^2.4.11",
     "webpack": "^4.23.1",
-    "webpack-cli": "^3.1.2",
-    "winston": "^3.2.1"
+    "webpack-cli": "^3.1.2"
   }
 }
